[gd_scene load_steps=4 format=2]

[ext_resource path="res://game-assets/game-scripts/test-zone-scripts/gimmicks-scripts/grab-top-script.gd" type="Script" id=1]
[ext_resource path="res://game-assets/game-sprites/levels-sprites/test-zone-assets/test-zone-gimmicks-sprites/chain_grab/spaced-grab.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 104, 8 )

[node name="GrabTop" type="Node2D"]
script = ExtResource( 1 )

[node name="GrabTopArea" type="Area2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="MainShape" type="CollisionShape2D" parent="GrabTopArea"]
position = Vector2( 0, 20 )
shape = SubResource( 1 )

[node name="Grab" type="Sprite" parent="GrabTopArea"]
position = Vector2( 4, 0 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 0, 24, 40 )

[connection signal="body_shape_entered" from="GrabTopArea" to="." method="_on_GrabTopArea_body_shape_entered"]
[connection signal="body_shape_exited" from="GrabTopArea" to="." method="_on_GrabTopArea_body_shape_exited"]
